--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cloud_firestore: ^3.3.0
   firebase_auth: ^3.4.2
   firebase_storage: ^10.3.2
+  image_picker: ^0.8.5+3
 
 dev_dependencies:
   flutter_test:
